<resources>
    <string name="app_name">Score Keeper</string>
    <string name="description_icon">Ball used in american football</string>
    <string name="team_a_name">Team A</string>
    <string name="team_b_name">Team B</string>
    <string name="scoreA">0</string>
    <string name="scoreB">0</string>
    <string name="touchdown">Touchdown</string>
    <string name="fieldGoal">Field Goal</string>
    <string name="two_points_miniTd">Mini Touchdown</string>
    <string name="two_points_safety">Safety</string>
    <string name="extra_point">Extra Point</string>
    <string name="reset">reset</string>
</resources>
